// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`People data Gov headcount and average age data 1`] = `
Object {
  "data": Object {
    "root": Object {
      "gov": Object {
        "people_data": Object {
          "average_age": Array [],
          "type": Array [
            Object {
              "avg_share": 0.030137901743797636,
              "dimension": "Casual",
              "yearly_data": Array [
                Object {
                  "value": 1062,
                  "year": 2010,
                },
                Object {
                  "value": 1130,
                  "year": 2011,
                },
              ],
            },
            Object {
              "avg_share": 0.8925717485936588,
              "dimension": "Indeterminate",
              "yearly_data": Array [
                Object {
                  "value": 32304,
                  "year": 2010,
                },
                Object {
                  "value": 32613,
                  "year": 2011,
                },
              ],
            },
            Object {
              "avg_share": 0.023552407246389587,
              "dimension": "Student",
              "yearly_data": Array [
                Object {
                  "value": 840,
                  "year": 2010,
                },
                Object {
                  "value": 873,
                  "year": 2011,
                },
              ],
            },
            Object {
              "avg_share": 0.053737942416153935,
              "dimension": "Term",
              "yearly_data": Array [
                Object {
                  "value": 2120,
                  "year": 2010,
                },
                Object {
                  "value": 1788,
                  "year": 2011,
                },
              ],
            },
          ],
        },
      },
    },
  },
}
`;

exports[`People data Org headcount and average age data 1`] = `
Object {
  "data": Object {
    "root": Object {
      "org": Object {
        "people_data": Object {
          "average_age": Array [],
          "type": Array [
            Object {
              "avg_share": 0.045408750719631547,
              "dimension": "Casual",
              "yearly_data": Array [
                Object {
                  "value": 309,
                  "year": 2010,
                },
                Object {
                  "value": 322,
                  "year": 2011,
                },
              ],
            },
            Object {
              "avg_share": 0.8478698906160046,
              "dimension": "Indeterminate",
              "yearly_data": Array [
                Object {
                  "value": 5895,
                  "year": 2010,
                },
                Object {
                  "value": 5887,
                  "year": 2011,
                },
              ],
            },
            Object {
              "avg_share": 0.07599309153713299,
              "dimension": "Student",
              "yearly_data": Array [
                Object {
                  "value": 502,
                  "year": 2010,
                },
                Object {
                  "value": 554,
                  "year": 2011,
                },
              ],
            },
            Object {
              "avg_share": 0.030728267127230858,
              "dimension": "Term",
              "yearly_data": Array [
                Object {
                  "value": 232,
                  "year": 2010,
                },
                Object {
                  "value": 195,
                  "year": 2011,
                },
              ],
            },
          ],
        },
      },
    },
  },
}
`;
